[project]
name = "documentation-agent"
version = "0.1.0"
requires-python = ">=3.11, <3.14"

dependencies = [
    "dapr-agents>=v1.0.0-rc.2",
    "python-dotenv>=1.2.1",
]


[dependency-groups]
dev = ["ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]